# htmx-examples-with-starlette

./: .github.yaml  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  package.json  pyproject.toml
.github/: dependabot.yml
app/: main.py
app/templates/: base.html  dynamic-content.html  index.html  random-number.html
app/templates/partials/: dynamic-content.html  number.html
